@@ -3,5 +3,5 @@
 #
 PKG_MAJOR=2
 PKG_MINOR=8
-PKG_REVISION=15
+PKG_REVISION=16
 PKG_BUILD=1
